# BarrierFinder

./: FFT.ll  FFT.opt.ll  README  README.md
Slicer/: CMakeLists.txt
Slicer/Callgraph/: Callgraph.cpp  Callgraph.h
Slicer/Languages/: LLVM.cpp  LLVM.h  LLVMSupport.h
Slicer/Modifies/: Modifies.cpp  Modifies.h
Slicer/PointsTo/: PointsTo.cpp  PointsTo.h  RuleExpressions.h
Slicer/Slicing/: BoundaryDetection.cpp  BoundaryDetection.h  FunctionStaticSlicer.cpp  FunctionStaticSlicer.h  Instrumenter.cpp  Instrumenter.h  Note.txt  PostDominanceFrontier.cpp  PostDominanceFrontier.h  README.txt  StaticSlicer.cpp  ValueRangePropagation.cpp  ValueRangePropagation.h  cmd.sh  distribute.sh  installation.sh  utility.cpp  utility.h
Slicer/Slicing/bugs/: README  bug1
Slicer/Slicing/design/: codeWrapping.txt  interProceduralVRPOrSlicing.txt  valueRangeWithPredicates.txt
Slicer/Slicing/instrument/: InitializeSwitchesAndCounter.c  RecordSyncVariable.c  cmd  join.c  lib.c  multiParameters.cpp  multiParamters.c  print.c  print.cpp  printChar.bc  printChar.c  printChar.cpp  printChar.cpp.compilable  printf.c  printf.cpp  schedule.c  schedule.cpp  trace.c
Slicer/Slicing/llvm/: AsmWriter.cpp  Attributes.cpp  CMakeLists.txt.lib.Transform  CMakeLists.txt.tools.gold  DominanceFrontier.h  DominanceFrontierImpl.h  Function.h.llvm.IR  GraphWriter.cpp.lib.support  InitializePasses.h  gold-plugin.cpp
Slicer/Slicing/testcase/: barrier.c  fft.c
Slicer/Slicing/testcase/TC3/: inter-slice.c
Slicer/Slicing/testcase/TC4/: inter-slice.c
splash2/: column.T  column.benchmark  column.loc  (+1 more)
(+1603 files in other folders)
